--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,8 @@ spring:
     password:
   resources:
     static-locations: file:src/main/resources/static/
-
+server:
+  port: 8090
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
@@ -20,3 +21,7 @@ mybatis-plus:
     db-config:
       logic-not-delete-value: 1
       logic-delete-value: 0
+jwt:
+  secret: secret
+  expiration: 7200000
+  token: Authorization
