--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 logging.level.org.springframework.security=info
+spring.devtools.restart.enabled= true
+spring.devtools.restart.additional-paths= src/main/java
