--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
-
+*.properties
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -28,8 +28,7 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+application.properties
 ### VS Code ###
 .vscode/
-!/src/main/resources/application.properties
-/src/main/resources/application.properties
+!/src/main/resources/*.properties
