--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ server.servlet.session.timeout = PT20M
 #spring.datasource.username=cooiez
 #spring.datasource.password=Test@123
 #local
-pring.datasource.url=jdbc:mysql://localhost:3306/cookiez?setUnicode=true&characterEncoding=utf8&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:3306/cookiez?setUnicode=true&characterEncoding=utf8&serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=
