--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,5 @@ build/
 application.properties
 ### VS Code ###
 .vscode/
-!/src/main/resources/*.properties
+/src/main/resources/*.properties
 /src/main/resources/application.properties
