--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.servlet.session.timeout = PT20M
 
 #local
 spring.datasource.url=jdbc:mysql://localhost:3306/cookiez?setUnicode=true&characterEncoding=utf8&serverTimezone=GMT
->>>>>>> 98e30172ebd031a48a2ce6c4b3d5a302ac689384
+
 spring.datasource.username=root
 spring.datasource.password=
+spring.servlet.multipart.max-file-size=10485760
+spring.servlet.multipart.max-request-size=10485760
