refactor: fix to run

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ application.properties
 .vscode/
 /src/main/resources/*.properties
 /src/main/resources/application.properties
+!/src/main/java/com/ditto/cookiez/config/AwsClient.java
+src/main/resources/mapper/
+src/main/resources/static/js/recipe/
