--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
             <groupId>org.apache.velocity</groupId>
             <version>1.7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.11.871</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
