refactor: fix to run

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-/src/main/resources/application.properties
+
 ### STS ###
 .apt_generated
 .classpath
@@ -33,4 +33,6 @@ application.properties
 .vscode/
 /src/main/resources/*.properties
 /src/main/resources/application.properties
-!/src/main/resources/application.properties
+!/src/main/java/com/ditto/cookiez/config/AwsClient.java
+src/main/resources/mapper/
+src/main/resources/static/js/recipe/
