--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ application.properties
 src/main/resources/mapper/
 src/main/resources/static/js/recipe/
 !/src/main/resources/application.properties
+!/src/main/resources/application-database.properties
