--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   resources:
     static-locations: file:src/main/resources/static/
+  profiles:
+    active: dev
 server:
   port: 8090
 
