use aws to store the data

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ application.properties
 /src/main/resources/application.properties
 !/src/main/java/com/ditto/cookiez/config/AwsClient.java
 src/main/resources/mapper/
-src/main/resources/static/js/recipe/
 !/src/main/resources/application.properties
 !/src/main/resources/application-database.properties
 !/src/main/resources/application-dev.properties
+src/main/resources/application-dev.properties
