--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ server.servlet.session.timeout = PT20M
 spring.servlet.multipart.max-file-size=10485760
 spring.servlet.multipart.max-request-size=10485760
 spring.profiles.active = dev
+spring.datasource.hikari.maxLifeTime = 600000
