--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,17 @@ server.servlet.session.timeout = PT20M
 
 spring.servlet.multipart.max-file-size=10485760
 spring.servlet.multipart.max-request-size=10485760
-spring.profiles.active = dev
+spring.profiles.active = de
 spring.datasource.hikari.max-lifetime=600000
+
+#spring.datasource.url=jdbc:mysql://54.90.176.81:3306/cookiez?useSSL=false&setUnicode=true&characterEncoding=utf8&serverTimezone=GMT&autoReconnect=true
+#spring.datasource.username=cooiez
+#spring.datasource.password=Cookie@123
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/cookiez?setUnicode=true&characterEncoding=utf8&serverTimezone=GMT
+#spring.datasource.username=root
+#spring.datasource.password=
+
+spring.datasource.url=jdbc:mysql://database-1.clw7pmpokpxy.us-east-1.rds.amazonaws.com/cookiez?useSSL=false&setUnicode=true&characterEncoding=utf8&serverTimezone=GMT&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=cookiez123
