Delete database password and url

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+/src/main/resources/application.properties
 ### STS ###
 .apt_generated
 .classpath
@@ -32,10 +32,31 @@ application.properties
 ### VS Code ###
 .vscode/
 /src/main/resources/*.properties
-/src/main/resources/application.properties
 !/src/main/java/com/ditto/cookiez/config/AwsClient.java
 src/main/resources/mapper/
 !/src/main/resources/application.properties
 !/src/main/resources/application-database.properties
 !/src/main/resources/application-dev.properties
 src/main/resources/application-dev.properties
+src/main/resources/application.properties
+src/main/resources/application.yml
+!/src/main/resources/application.properties
+!/src/main/resources/application.properties
+!/src/main/resources/application.properties
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
+!/src/main/resources/application.properties
