--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 spring:
   thymeleaf:
-    prefix: file:src/main/resources/templates/
+    prefix: classpath:/templates/
+    suffix: .html
     cache: false
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
 #    driver-class-name: com.mysql.jdbc.Driver
-  resources:
-    static-locations: file:src/main/resources/static/
+#  resources:
+#    static-locations: file:src/main/resources/static/
   profiles:
     active: dev
 server:
